cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 14)
set(DISPATCHER_LIB dispatcherlib)
SET(PYDISPATCHER_LIB allonspy)
set(CMAKE_VERBOSE_MAKEFILE ON)
find_package(Python 3.9 COMPONENTS Interpreter Development)
MESSAGE(${Python_INCLUDE_DIRS})
include_directories(${Python_INCLUDE_DIRS})
FIND_PACKAGE( Boost 1.63 COMPONENTS python39 REQUIRED )

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
SET(requiredlibs ${requiredlibs} ${Boost_LIBRARIES} ${Python_LIBRARIES})
MESSAGE(${Python_LIBRARIES})
add_library(greet SHARED greet.cpp)
target_link_libraries(greet ${requiredlibs} ${Boost_LIBRARIES} ${Python_LIBRARIES})
Python_add_library(greet_ext MODULE greet_ext.cpp)
target_link_libraries(greet_ext PRIVATE greet ${Python_LIBRARIES} ${Boost_LIBRARIES})
